--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,22 @@ frozenlist==1.4.1
 fsspec==2024.9.0
 gitdb==4.0.11
 GitPython==3.1.43
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
 gotrue==2.9.2
+grpcio==1.74.0
+grpcio-status==1.71.2
 gunicorn==23.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
+httplib2==0.30.0
 httpx==0.27.2
 huggingface-hub==0.25.0
 hyperframe==6.0.1
@@ -59,7 +69,7 @@ multidict==6.1.0
 mypy-extensions==1.0.0
 narwhals==1.8.2
 numpy==2.1.1
-openai==0.28.0
+openai==1.104.2
 packaging==24.1
 pandas==2.2.3
 passlib==1.7.4
@@ -67,9 +77,12 @@ pillow==10.4.0
 pluggy==1.5.0
 postgrest==0.17.1
 propcache==0.2.0
+proto-plus==1.26.1
 protobuf==5.28.2
+psutil==7.0.0
 pyarrow==17.0.0
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
@@ -77,6 +90,7 @@ pydub==0.25.1
 Pygments==2.18.0
 PyJWT==2.9.0
 pyngrok==7.2.0
+pyparsing==3.2.3
 pytest==8.3.3
 pytest-asyncio==0.24.0
 python-dateutil==2.9.0.post0
@@ -92,6 +106,7 @@ requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
 rsa==4.9
+scipy==1.16.2
 simple-websocket==1.0.0
 six==1.16.0
 smmap==5.0.1
@@ -112,6 +127,7 @@ twilio==9.3.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
+uritemplate==4.2.0
 urllib3==2.2.3
 uvicorn==0.30.6
 watchdog==4.0.2
